# OpenZoe

./: Dockerfile  PIX.md  README.md  config.py  docker-compose.yml  index.html  main.py  pyproject.toml
core/: analytics.py  database.py  dicom_parser.py  utils.py
docs/: PIX.md  index.html
reports/: charts_export.py  csv_export.py  pdf_export.py
ui/: charts_ui.py
