[project]
name = "OpenZoe"
version = "0.1.0"
description = "Analise de dose para setores de radiologia"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Amaro", email = "gabrielamaroufrj@gmail.com" }
]
dependencies = [
    "flet>=0.80.1",
    "flet_charts",
    "matplotlib",
    "pydicom",
    "charset-normalizer",
    "numpy==1.26.4"
]

[dependency-groups]
dev = [
    "flet[all]>=0.80.1",
]


[tool.flet.android]
org = "com.amaro.openzoe"
label = "OpenZoe"
icon = "assets/icon.png"  

[tool.flet.android.splash]
image = "assets/splash.png" 
color = "#101010"
dark_color = "#000000"

[tool.flet.linux]
app_id = "com.amaro.openzoe"
label = "OpenZoe"
icon = "assets/icon.png"

[tool.flet.windows]
label = "Gerenciar Radiologia"       
product_name = "OpenZoe" 
icon = "assets/icon.png"     
copyright = "Copyright (c) 2026 Gabriel Amaro"
company_name = "Amaro"
